[Feat] 폰트설정 및 GlobalStyle 설정

--- a/nursery_front/jsconfig.json
+++ b/nursery_front/jsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@src/*": ["./src/*"],
+      "@images/*": ["./public/images/*"],
+      "@public/*": ["./public/*"]
     }
   }
 }
