--- a/nursery_front/package.json
+++ b/nursery_front/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
     "babel-plugin-styled-components": "^2.1.4",
+    "bootstrap": "^5.3.1",
     "eslint": "^8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-prettier": "^5.0.0",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.7",
+    "styled-reset": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
