--- a/nursery_front/.eslintrc.json
+++ b/nursery_front/.eslintrc.json
@@ -16,10 +16,10 @@
     "eslint:recommended",
     "plugin:prettier/recommended",
     "plugin:@next/next/recommended",
-    "prettier",
-    "plugin:react/recommended"
+    "next/core-web-vitals",
+    "prettier"
   ],
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "react-hook", "prettier"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }, { "usePrettierrc": true }],
     "react/prop-types": "off",
