--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tooltip": "^5.21.1",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.4.1"
   },
