--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
     "babel-plugin-styled-components": "^2.1.4",
+    "chart.js": "^4.3.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
