--- a/nursery_front/jsconfig.json
+++ b/nursery_front/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["./src/components/*"],
       "@src/*": ["./src/*"],
       "@images/*": ["./public/images/*"],
       "@public/*": ["./public/*"]
