--- a/nursery_front/package.json
+++ b/nursery_front/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
+    "@tanstack/react-query": "^4.33.0",
+    "axios": "^1.5.0",
     "babel-plugin-styled-components": "^2.1.4",
     "bootstrap": "^5.3.1",
     "eslint": "^8.47.0",
@@ -20,6 +22,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-secure-storage": "^1.3.0",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.4.1"
   },
