--- a/nursery_front/package.json
+++ b/nursery_front/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-prettier": "^5.0.0",
+    "html5-qrcode": "^2.3.8",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
