--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
     "react-tooltip": "^5.21.1",
     "styled-components": "^6.0.7",
