--- a/nursery_front/package.json
+++ b/nursery_front/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-secure-storage": "^1.3.0",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.4.1"
