[Feat] ReactQuery 관련 설정 완료

--- a/nursery_front/jsconfig.json
+++ b/nursery_front/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@hooks/*": ["./src/hooks/*"],
       "@components/*": ["./src/components/*"],
       "@src/*": ["./src/*"],
       "@images/*": ["./public/images/*"],
