--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -16,6 +16,8 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "qrcode": "^1.5.3",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
