--- a/nursery_front/package.json
+++ b/nursery_front/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .jsx --ext .js src/",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "deploy:local": "next build && pm2 startOrRestart ecosystem.config.js --env local",
+    "deploy:dev": "next build && pm2 startOrRestart ecosystem.config.js --env development",
+    "deploy:prod": "next build && pm2 startOrRestart ecosystem.config.js --env production"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
