[Feat] 통계현황 리스트 UI 구현

--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
+    "@wojtekmaj/react-daterange-picker": "^5.4.2",
     "babel-plugin-styled-components": "^2.1.4",
     "chart.js": "^4.3.3",
     "eslint": "8.47.0",
