--- a/nursery_front/jsconfig.json
+++ b/nursery_front/jsconfig.json
@@ -4,6 +4,9 @@
     "paths": {
       "@hooks/*": ["./src/hooks/*"],
       "@components/*": ["./src/components/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@states/*": ["./src/states/*"],
+      "@apis/*": ["./src/apis/*"],
       "@src/*": ["./src/*"],
       "@images/*": ["./public/images/*"],
       "@public/*": ["./public/*"]
