--- a/nursery_front/package.json
+++ b/nursery_front/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-indiana-drag-scroll": "^2.2.0",
     "react-secure-storage": "^1.3.0",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.4.1"
   },
