--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -20,6 +20,7 @@
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
     "react-tooltip": "^5.21.1",
