--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -14,6 +14,7 @@
     "@wojtekmaj/react-daterange-picker": "^5.4.2",
     "babel-plugin-styled-components": "^2.1.4",
     "chart.js": "^4.3.3",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -21,8 +22,13 @@
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-color": "^2.19.3",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.16.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-select": "^5.7.4",
+    "react-select-search": "^4.1.6",
     "react-tooltip": "^5.21.1",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.4.1"
