--- a/manager_front/.prettierrc
+++ b/manager_front/.prettierrc
@@ -1,8 +1,11 @@
 {
-  "singleQuote": false,
+  "arrowParens": "always",
+  "bracketSameLine": true,
   "semi": true,
-  "useTabs": false,
-  "tabWidth": 2,
+  "printWidth": 120,
+  "singleQuote": false,
   "trailingComma": "all",
-  "printWidth": 80
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true
 }
