--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
     "@wojtekmaj/react-daterange-picker": "^5.4.2",
+    "axios": "^1.5.0",
     "babel-plugin-styled-components": "^2.1.4",
     "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
@@ -27,6 +28,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
     "react-multi-select-component": "^4.3.4",
+    "react-secure-storage": "^1.3.0",
     "react-select": "^5.7.4",
     "react-select-search": "^4.1.6",
     "react-tooltip": "^5.21.1",
