--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
+    "@tanstack/react-query": "^4.35.0",
     "@wojtekmaj/react-daterange-picker": "^5.4.2",
     "axios": "^1.5.0",
     "babel-plugin-styled-components": "^2.1.4",
