[Fix] - 총 생산량 조회 api 날짜 필터링 수정 - 작물별 생산량 조회 api 날짜 필터링 수

--- a/backend/docker-compose.db.dev.yml
+++ b/backend/docker-compose.db.dev.yml
@@ -15,3 +15,14 @@ services:
       - 5120
     volumes:
       - ./db/postgres/data:/var/lib/postgresql/data/
+
+  # redis:
+  #   container_name: data_nursery_redis
+  #   restart: always
+  #   build:
+  #     context: ./db/redis
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "4120:6379"
+  #   expose:
+  #     - 4120
