--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -28,6 +28,7 @@
     "react-datepicker": "^4.16.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-multi-select-component": "^4.3.4",
     "react-secure-storage": "^1.3.0",
     "react-select": "^5.7.4",
