--- a/nursery_front/package.json
+++ b/nursery_front/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "babel-plugin-styled-components": "^2.1.4",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.0",
     "eslint": "^8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-prettier": "^5.0.0",
