--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -23,6 +23,7 @@
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-color": "^2.19.3",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.16.0",
@@ -34,6 +35,7 @@
     "react-select": "^5.7.4",
     "react-select-search": "^4.1.6",
     "react-tooltip": "^5.21.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.4.1"
   },
