--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "file-saver": "^2.0.5",
     "next": "13.4.19",
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
@@ -36,6 +37,7 @@
     "react-select-search": "^4.1.6",
     "react-tooltip": "^5.21.1",
     "recoil": "^0.7.7",
+    "save-as": "^0.1.8",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.4.1"
   },
