--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -19,10 +19,12 @@
     "axios": "^1.5.0",
     "babel-plugin-styled-components": "^2.1.4",
     "chart.js": "^4.3.3",
+    "chartjs-adapter-moment": "^1.0.1",
     "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
