--- a/manager_front/package.json
+++ b/manager_front/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.3.3",
     "chartjs-adapter-moment": "^1.0.1",
     "date-fns": "^2.30.0",
+    "dom-to-image": "^2.6.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "file-saver": "^2.0.5",
